# danvonk.github.io

./: .gitignore  CNAME  Gemfile  _config.yml  about.html  archive.html  danvonk.cabal  flake.nix  index.html  readinglist.html  readinglist.md  robots.txt  site.hs  stack.yaml
_data/: navigation.yml
_includes/: footer_content.html  head_custom.html
_posts/: 2020-10-31-welcome-to-jekyll.markdown
css/: default.css  readinglist.css  tufte.css  venobox.css
drafts/: 2022-12-10-luxury-in-yerevan.html  2022-12-10-luxury-in-yerevan.md  2022-12-11-dogu-express.md  2022-12-12-common-hakyll-mistakes.html  2022-12-12-common-hakyll-mistakes.md  2023-01-13-stepantsminda.md  2023-03-03-strangeness-of-armenia.html  2023-03-03-strangeness-of-armenia.md  2023-03-17-sunrise-mono-lake.md  2023-04-05-summer-in-berlin.md  2023-04-06-morrocco.md  2023-06-16-lightbox-tests.html  2023-06-16-lightbox-tests.md  2023-06-16-shots-from-morroco.html  2023-06-16-shots-from-morroco.md  2023-06-21-lightbox-library-in-hakyll.md  2023-10-01-kel-suu.html  2023-10-01-kel-suu.md  2023-10-02-barskoon-valley.md  2023-10-02-hiking-altyr-arashan.html  2023-10-02-hiking-altyr-arashan.md  2023-10-03-on-tour-with-the-uaz.md  2023-10-04-up-in-naryn.html  2023-10-04-up-in-naryn.md  2023-10-19-shopsigns-in-muscat.md  2024-05-20-optimising-with-taskflow.html  2024-05-20-optimising-with-taskflow.md  2024-05-21-normalising-flows-with-haskell.html  2024-05-21-normalising-flows-with-haskell.md  2024-09-12-stratocaster-build.html  2024-09-12-stratocaster-build.md  2024-10-05-neutron-scattering-cuda-taskflow.html  (+15 more)
(+91 files in other folders)
