name:               danvonk
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*,
                    text >= 1.2.5.0,
                    mtl >= 2.2.2,
                    hakyll == 4.16.0.0,
                    hakyll-images >= 1.2.1,
                    pandoc-sidenote >= 0.23.0.0,
                    pandoc-types >= 1.23,
                    pandoc >= 3.1
  hs-source-dirs:   src
  other-modules:    BlogPost
                    , Gallery
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
